commit trang chu